--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="col-sm-3 h-box ">
                     <a href=""><i class="fas fa-laptop-house"></i></a>
                     <div class="col">
-                        <h5>Gojeekers <br>Delivered Love For You</h5>
+                        <h5>Gojeekers <br>Delivered For You</h5>
                     </div>
                 </div>
             </div>
