--- a/index.html
+++ b/index.html
@@ -162,8 +162,7 @@
                             </div>
                             <div class="col-sm-5 sb skill-box-4">
                                 <h4>Join Team</h4>
-                                <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo fugiat autem
-                                    consectetur.</h6>
+                                <h6>Lorem ipsum dolor sit amet consectetu.</h6>
                             </div>
                         </div>
                     </div>
