--- a/index.html
+++ b/index.html
@@ -8,24 +8,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa:wght@700&family=Underdog&display=swap"
         rel="stylesheet">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="bootstrap-4.5.2-dist/bootstrap-4.5.2-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="bootstrap-4.5.2-dist/bootstrap-4.5.2-dist/css/style.css">
-    <link rel="stylesheet" href="bootstrap-4.5.2-dist/bootstrap-4.5.2-dist/css/responsive.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="assets/responsive.css">
+    <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="icon/fontawesome-free-5.14.0-web/fontawesome-free-5.14.0-web/css/all.min.css">
     <title>Portfolio</title>
 </head>
 
 <body>
     <!-- Navbar -->
+
     <nav class="navbar navbar-expand-lg  ">
         <div class="container">
             <a class="navbar-brand" href="#">SangSloop</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav ml-auto">
+                <div class="navbar-nav mx-auto">
                     <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
                     <a class="nav-link" href="#about">About</a>
                     <a class="nav-link" href="#skill">Skill</a>
@@ -48,7 +51,6 @@
                 </div>
                 <div class="col-sm-6">
                     <div class="hero">
-                        <!-- <img class="mawar" src="img/mawar.png" alt=""> -->
                         <img src="img/87.png" alt="">
                     </div>
                 </div>
@@ -173,18 +175,18 @@
 
     <!-- Portfolio -->
     <section class="portfolio" id="portfolio">
-        <div class="container-fluid">
-            <div class="row">
+        <div class="container">
+            <div class="row mx-auto">
                 <div class="col-sm-12 text-center">
                     <h1>HOLIDAY BE HAPPY</h1>
                 </div>
             </div>
             <div class="row mb-4 port-row">
-                <div class="col-sm-5 herop mb-3">
+                <div class="col-sm-4 herop mb-3">
                     <a href="#"><img src="img/img/b1.jpg" alt="porg">
                     </a>
                 </div>
-                <div class="col-sm-3 herop mb-3">
+                <div class="col-sm-4 herop mb-3">
                     <a href="#"><img src="img/img/b2.jpg" alt="port1">
                     </a>
                 </div>
@@ -196,11 +198,11 @@
                     <a href="#"><img src="img/img/b4.jpg" alt="port3">
                     </a>
                 </div>
-                <div class="col-sm-3 herop mb-3">
+                <div class="col-sm-4 herop mb-3">
                     <a href="#"><img src="img/img/b8.jpg" alt="port5.">
                     </a>
                 </div>
-                <div class="col-sm-5 herop">
+                <div class="col-sm-4 herop">
                     <a href="#"><img src="img/img/b7.jpg" alt="port5.">
                     </a>
                 </div>
@@ -263,28 +265,21 @@
     <button onclick="topFunction()" id="myBtn" title="Go to top"><span><i
                 class="far fa-arrow-alt-circle-up"></i></span></button>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"
-        integrity="sha256-2p2tRZlPowp3P/04Pw2rqVCSbhyV/IB7ZEVUglrDS/c=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/ScrollTrigger.min.js"></script>
-    <Script src="js/script.js"></Script>
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
+        integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
+        integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG"
         crossorigin="anonymous"></script>
-    <script src="bootstrap-4.5.2-dist/bootstrap-4.5.2-dist/js/script.js"></script>
+    <script src="assets/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
-
 </body>
 
 </html>
