--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa:wght@700&family=Underdog&display=swap"
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Kaisei+HarunoUmi:wght@400;500;700&family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,400&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,900&family=Roboto:wght@400;700;900&family=Rubik:ital,wght@0,300;0,400;0,500;0,700;0,800;1,900&display=swap"
         rel="stylesheet">
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link rel="stylesheet" href="assets/responsive.css">
     <link rel="stylesheet" href="assets/style.css">
@@ -22,7 +25,7 @@
 
     <nav class="navbar navbar-expand-lg  ">
         <div class="container">
-            <a class="navbar-brand" href="#">SangSloop</a>
+            <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
@@ -38,16 +41,17 @@
             </div>
         </div>
     </nav>
-
     <!-- Header -->
     <header class="header " id="header">
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 header-1">
-                    <h1> Hai ! I'm Sang Sloop <br>Web Development</h1>
+                    <h1> Hai ! I'm Sang Sloop</h1>
                     <h6>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus et, maiores a asperiores
                         itaque adipisci.</h6>
-                    <a class="btn btn-primary btn-md" href="#" role="button">Learn more</a>
+                    <div class="button-holder text-left">
+                        <a href="#portfolio" class="button">LEARN MORE</a>
+                    </div>
                 </div>
                 <div class="col-sm-6">
                     <div class="hero">
@@ -55,24 +59,19 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-3 h-box mr-3 mb-3 offset-md-1">
-                    <a href=""><i class="fas fa-laptop-code"></i></a>
-                    <div class="col">
-                        <h5>Web Desain<br>Creative</h5>
-                    </div>
+            <div class="box row d-flex justify-content-between">
+                <div class="col-sm-3 h-box  d-flex justify-content-evenly offset-sm-1 py-4 ">
+                    <a href=""><i class="fas fa-laptop-code "></i></a>
+                    <h5>Web Desain<br>Creative</h5>
                 </div>
-                <div class="col-sm-3 h-box mr-3 mb-3">
-                    <a href=""><i class="fas fa-laptop-medical"></i></a>
-                    <div class="col">
-                        <h5>Cool Animation Website </h5>
-                    </div>
-                </div>
-                <div class="col-sm-3 h-box ">
+
+                <div class="col-sm-3 h-box  d-flex justify-content-evenly  py-4 ">
                     <a href=""><i class="fas fa-laptop-house"></i></a>
-                    <div class="col">
-                        <h5>Gojeekers <br>Delivered For You</h5>
-                    </div>
+                    <h5>Gojeekers <br>Delivered For You</h5>
+                </div>
+                <div class="col-sm-3 h-box  d-flex justify-content-evenly  py-4 ">
+                    <a href=""><i class="fas fa-laptop-medical"></i></a>
+                    <h5>Cool Animation <br> Website </h5>
                 </div>
             </div>
         </div>
@@ -80,41 +79,79 @@
 
     <!-- About -->
     <section class="about" id="about">
-        <div class="container">
-            <div class="row ">
-                <div class="col-md-6 mr-2 0ffset-md-1">
-                    <div class="hero-2  mt-5">
-                        <h1><strong> Hai ! <br> There</strong></h1>
+        <div class="container mx-auto">
+            <div class="container-about">
+                <div class="row ">
+                    <div class="col mt-5 text-center">
+                        <h2>Hello Slurr</h2>
+                        <div class="col-md-10 mx-auto">
+                            <h6>Nama Saya
+                                <strong>SangSloop.</strong>
+                                Berasal dari Surabaya,sedang menekuni bidang mengenai web developer. Proses pembelajaran
+                                yang
+                                tidak mudah bagi saya dan terus belajar hingga kini karena teknologi terus berkembang.
+                            </h6>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-4 mt-5">
-                    <h5 class="abouth">About Me</h5>
-                    <div class="aboutme">
-                        <h2>Make Your Website Now</h2>
-                        <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum pariatur soluta optio
-                            recusandae consequatur quasi.</h6>
+                <div class="row ">
+                    <div class="col-md-8 mt-4 mx-auto">
+                        <div class="row d-flex justify-content-between">
+                            <div class="col-md-4">
+                                <div class="mb-3">
+                                    <label for="exampleFormControlInput1" class="form-label">Nama : </label>
+                                    <h6 class="label-h6">Renaldi Sang Sloop</h6>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="mb-3">
+                                    <label for="exampleFormControlInput1" class="form-label">Email :</label>
+                                    <h6 class="label-h6">informatika3052@gmail.com</h6>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="brand branding-1 ">
-                        <ul>
-                            <li><a href=""><i class="fab fa-facebook"></i></a></li>
-                            <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                            <li><a href=""><i class="fab fa-telegram"></i></a></li>
-                            <li><a href=""><i class="fab fa-whatsapp"></i></a></li>
-                            <li><a href=""><i class="fab fa-github"></i></a></li>
-                        </ul>
-                        <!-- <p>Andaikan tidur bisa membuat <b>KAYA</b>. Maka, Mungkin saya sudah menjadi <b>SULTAN</b>. </p> -->
+                    <div class="col-md-8 mt-4 mx-auto">
+                        <div class="row d-flex justify-content-between">
+                            <div class="col-md-4">
+                                <div class="mb-3">
+                                    <label for="exampleFormControlInput1" class="form-label">Nama : </label>
+                                    <h6 class="label-h6">Renaldi Sang Sloop</h6>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="mb-3">
+                                    <label for="exampleFormControlInput1" class="form-label">Email :</label>
+                                    <h6 class="label-h6">informatika3052@gmail.com</h6>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4 mx-auto">
+                        <div class=" branding-1 ">
+                            <ul>
+                                <li><a href=""><i class="fab fa-facebook"></i></a></li>
+                                <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                                <li><a href=""><i class="fab fa-telegram"></i></a></li>
+                                <li><a href=""><i class="fab fa-whatsapp"></i></a></li>
+                                <li><a href=""><i class="fab fa-github"></i></a></li>
+                            </ul>
+                            <!-- <p>Andaikan tidur bisa membuat <b>KAYA</b>. Maka, Mungkin saya sudah menjadi <b>SULTAN</b>. </p> -->
+                        </div>
                     </div>
                 </div>
             </div>
+            <!-- <div class="svg-gel">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                    <path fill="rgb(216, 181, 24)" fill-opacity="0.4"
+                        d="M0,256L30,261.3C60,267,120,277,180,245.3C240,213,300,139,360,112C420,85,480,107,540,144C600,181,660,235,720,240C780,245,840,203,900,202.7C960,203,1020,245,1080,250.7C1140,256,1200,224,1260,197.3C1320,171,1380,149,1410,138.7L1440,128L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z">
+                    </path>
+                </svg>
+            </div> -->
         </div>
-        <!-- <div class="plane">
-            <img class="plane1" src="img/plane1.png" alt="plane1">
-        </div> -->
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-            <path fill="rgb(255, 145, 0)" fill-opacity="0.8"
-                d="M0,256L30,261.3C60,267,120,277,180,245.3C240,213,300,139,360,112C420,85,480,107,540,144C600,181,660,235,720,240C780,245,840,203,900,202.7C960,203,1020,245,1080,250.7C1140,256,1200,224,1260,197.3C1320,171,1380,149,1410,138.7L1440,128L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z">
-            </path>
-        </svg>
+
     </section>
 
     <!-- Skill -->
