--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@
 
     <!-- Skill -->
     <section class="skill" id="skill">
+        <section>
+            <div class="skewed"></div>
+        </section>
         <div class="container">
             <div class="skill-a">
                 <div class="row">
