--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
     <section class="about" id="about">
         <div class="container mx-auto">
             <div class="container-about">
+                <div class="about-title">
+                    <h1>About</h1>
+                </div>
                 <div class="row ">
                     <div class="col mt-5 text-center">
                         <h2>Hello Slurr</h2>
@@ -159,33 +162,25 @@
         <section>
             <div class="skewed"></div>
         </section>
+        <div class="row mx-auto pt-3">
+            <div class="col-sm-2 portfolio-title">
+                <h1>Portfolio</h1>
+            </div>
+        </div>
         <div class="container">
             <div class="skill-a">
                 <div class="row">
                     <div class="col-md-5 ">
                         <div class="skill-1">
-                            <h5 class="skill-he">My Skill</h5>
                             <h2>What My Design<br>Skill Included</h2>
                             <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum pariatur soluta optio
                                 recusandae consequatur quasi.</h6><br>
-                            <h4 class="skill-html">HTML <span>80%</span></h4>
-                            <div class="progress mb-3">
-                                <div class="progress-bar bg-warning" role="progressbar" style="width: 80%"
-                                    aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-                                </div>
-                            </div>
-                            <h4 class="skill-css">CSS <span>90%</span></h4>
-                            <div class="progress mb-3">
-                                <div class="progress-bar bg-warning" role="progressbar" style="width: 90%"
-                                    aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                </div>
-                            </div>
-                            <h4 class="skill-js ">JavaScript<span>75%</span></h4>
-                            <div class=" progress mb-2">
-                                <div class="progress-bar bg-warning" role="progressbar" style="width: 75%"
-                                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                                </div>
-                            </div>
+                            <h4 class="skill-html">HTML</h4>
+
+                            <h4 class="skill-css">CSS</h4>
+
+                            <h4 class="skill-js ">JavaScript</h4>
+
                         </div>
                     </div>
                     <div class="col-md-6 skill-2 ml-auto">
@@ -215,36 +210,38 @@
 
     <!-- Portfolio -->
     <section class="portfolio" id="portfolio">
-        <div class="container">
-            <div class="row mx-auto">
-                <div class="col-sm-12 text-center">
-                    <h1>HOLIDAY BE HAPPY</h1>
-                </div>
+        <div class="row mx-auto pt-3">
+            <div class="col-sm-2 portfolio-title">
+                <h1>Portfolio</h1>
             </div>
-            <div class="row mb-4 port-row">
-                <div class="col-sm-4 herop mb-3">
-                    <a href="#"><img src="img/img/b1.jpg" alt="porg">
-                    </a>
-                </div>
-                <div class="col-sm-4 herop mb-3">
-                    <a href="#"><img src="img/img/b2.jpg" alt="port1">
-                    </a>
-                </div>
-                <div class="col-sm-4 herop mb-3">
-                    <a href="#"><img src="img/img/b3.jpg" alt="port2">
-                    </a>
-                </div>
-                <div class="col-sm-4 herop mb-3">
-                    <a href="#"><img src="img/img/b4.jpg" alt="port3">
-                    </a>
-                </div>
-                <div class="col-sm-4 herop mb-3">
-                    <a href="#"><img src="img/img/b8.jpg" alt="port5.">
-                    </a>
-                </div>
-                <div class="col-sm-4 herop">
-                    <a href="#"><img src="img/img/b7.jpg" alt="port5.">
-                    </a>
+        </div>
+        <div class="container  ">
+            <div class="container-portfolio">
+                <div class="row mb-3 p-5">
+                    <div class="col-sm-4 herop mb-3">
+                        <div class="row ">
+                            <div class="col-sm-12 mb-3 img-b">
+                                <a href="#"><img src="img/port1.PNG" alt="porg"></a>
+                            </div>
+                            <div class="col-sm-12 img-b">
+                                <a href="#"><img src="img/img/b2.jpg" alt="port1"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 herop mb-3 img-b">
+                        <a href="#"><img src="img/port76.PNG" alt="port2"></a>
+                    </div>
+
+                    <div class="col-sm-4 herop mb-3">
+                        <div class="row">
+                            <div class="col-sm-12 mb-3 img-b">
+                                <a href="#"><img src="img/port1.PNG" alt="porg"></a>
+                            </div>
+                            <div class="col-sm-12 img-b">
+                                <a href="#"><img src="img/port2.PNG" alt="port1"></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -253,43 +250,52 @@
     <section class="contact" id="contact">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 text-center">
-                    <h1>LET'S TALK</h1>
+                <div class="col-sm-3 contact-sec">
+                    <h1>Contact Us</h1>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 mb-3">
-                    <form>
-                        <div class="form-group col-md-12">
-                            <label for="inputEmail4">Name</label>
-                            <input type="email" class="form-control" id="inputEmail4">
-                        </div>
-                        <div class="form-group col-md-12">
-                            <label for="inputPassword4">Email</label>
-                            <input type="password" class="form-control" id="inputPassword4">
-                        </div>
-                        <div class="form-group col-md-12">
-                            <label for="inputAddress">Address</label>
-                            <input type="text" class="form-control" id="inputAddress" placeholder="">
-                        </div>
-                        <div class="form-group col-md-12">
-                            <label for="inputCity">City</label>
-                            <input type="text" class="form-control" id="inputCity">
-                        </div>
-                        <button type="submit" class="btn btn-primary "><span>Send</span></button>
-                    </form>
+                <div class="col-md-7 mb-3 ">
+                    <h3>
+                        <input type="text" class="col-md-9 input-contact" name="inputtext4" placeholder="Name">
+                    </h3>
+                    <h3>
+
+                        <input type="text" class="col-md-9 input-contact" name="inputtext4" placeholder="Eamil">
+                    </h3>
+                    <h3>
+
+                        <input type="text" class="col-md-9 input-contact" name="inputEmail4" placeholder="Subject">
+                    </h3>
+                    <h3>
+
+                        <textarea type="email" class="col-md-9 input-contact textarea" name="inputEmail4"
+                            placeholder="Message"></textarea>
+                    </h3>
+                    <button class="btn contact-btn mt-4">SEND</button>
                 </div>
-                <div class="col-md-6">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.7978355211326!2d112.7277263142795!3d-7.2638338947568455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7f959a1d36539%3A0x681de9688fbc0f41!2sJl.%20Kedung%20Anyar%20I%20No.17%2C%20RT.001%2FRW.12%2C%20Sawahan%2C%20Kec.%20Sawahan%2C%20Kota%20SBY%2C%20Jawa%20Timur%2060251!5e0!3m2!1sid!2sid!4v1598542452443!5m2!1sid!2sid"
-                        width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""
-                        aria-hidden="false" tabindex="0">
-                    </iframe>
+                <div class="col-md-5">
+                    <div class="one_half ">
+                        <h3 class="title-contact">
+                            Lets start Working
+                        </h3>
+                        <h5>
+                            Because they are hard, because that goal will serve to organize and measure the best of our
+                            energies and skills, because that challenge is one that we are willing to accept one we are.
+                        </h5>
+                    </div>
                 </div>
+            </div>
+            <div class="col-md-12 mb-4 maps">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3957.7978355211326!2d112.7277263142795!3d-7.2638338947568455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7f959a1d36539%3A0x681de9688fbc0f41!2sJl.%20Kedung%20Anyar%20I%20No.17%2C%20RT.001%2FRW.12%2C%20Sawahan%2C%20Kec.%20Sawahan%2C%20Kota%20SBY%2C%20Jawa%20Timur%2060251!5e0!3m2!1sid!2sid!4v1598542452443!5m2!1sid!2sid"
+                    width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                    tabindex="0">
+                </iframe>
             </div>
         </div>
     </section>
-    <footer class="last ">
+    <footer>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12">
