--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="assets/responsive.css">
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/responsive.css">
     <link rel="stylesheet" href="icon/fontawesome-free-5.14.0-web/fontawesome-free-5.14.0-web/css/all.min.css">
     <title>Portfolio</title>
 </head>
@@ -31,7 +31,7 @@
                 <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav mx-auto">
+                <div class="navbar-nav mx-auto ">
                     <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
                     <a class="nav-link" href="#about">About</a>
                     <a class="nav-link" href="#skill">Skill</a>
@@ -88,7 +88,7 @@
                     <div class="col mt-5 text-center">
                         <h2>Hello Slurr</h2>
                         <div class="col-md-10 mx-auto">
-                            <h6>Nama Saya
+                            <h6 class="profile-text">Nama Saya
                                 <strong>SangSloop.</strong>
                                 Berasal dari Surabaya,sedang menekuni bidang mengenai web developer. Proses pembelajaran
                                 yang
@@ -101,13 +101,13 @@
                     <div class="col-md-8 mt-4 mx-auto">
                         <div class="row d-flex justify-content-between">
                             <div class="col-md-4">
-                                <div class="mb-3">
+                                <div class="mb-3 bio-about">
                                     <label for="exampleFormControlInput1" class="form-label">Nama : </label>
                                     <h6 class="label-h6">Renaldi Sang Sloop</h6>
                                 </div>
                             </div>
                             <div class="col-md-4">
-                                <div class="mb-3">
+                                <div class="mb-3 bio-about">
                                     <label for="exampleFormControlInput1" class="form-label">Email :</label>
                                     <h6 class="label-h6">informatika3052@gmail.com</h6>
                                 </div>
@@ -117,13 +117,13 @@
                     <div class="col-md-8 mt-4 mx-auto">
                         <div class="row d-flex justify-content-between">
                             <div class="col-md-4">
-                                <div class="mb-3">
+                                <div class="mb-3 bio-about">
                                     <label for="exampleFormControlInput1" class="form-label">Nama : </label>
                                     <h6 class="label-h6">Renaldi Sang Sloop</h6>
                                 </div>
                             </div>
                             <div class="col-md-4">
-                                <div class="mb-3">
+                                <div class="mb-3 bio-about">
                                     <label for="exampleFormControlInput1" class="form-label">Email :</label>
                                     <h6 class="label-h6">informatika3052@gmail.com</h6>
                                 </div>
@@ -163,8 +163,8 @@
             <div class="skewed"></div>
         </section>
         <div class="row mx-auto pt-3">
-            <div class="col-sm-2 portfolio-title">
-                <h1>Portfolio</h1>
+            <div class="col-sm-2 portfolio-title ">
+                <h1>Skill</h1>
             </div>
         </div>
         <div class="container">
@@ -211,7 +211,7 @@
     <!-- Portfolio -->
     <section class="portfolio" id="portfolio">
         <div class="row mx-auto pt-3">
-            <div class="col-sm-2 portfolio-title">
+            <div class="col-sm-2 portfolio-title port-responsive">
                 <h1>Portfolio</h1>
             </div>
         </div>
@@ -255,26 +255,24 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-7 mb-3 ">
+                <div class="col-md-6 mb-3 ">
                     <h3>
                         <input type="text" class="col-md-9 input-contact" name="inputtext4" placeholder="Name">
                     </h3>
                     <h3>
-
                         <input type="text" class="col-md-9 input-contact" name="inputtext4" placeholder="Eamil">
                     </h3>
                     <h3>
-
                         <input type="text" class="col-md-9 input-contact" name="inputEmail4" placeholder="Subject">
                     </h3>
                     <h3>
-
                         <textarea type="email" class="col-md-9 input-contact textarea" name="inputEmail4"
-                            placeholder="Message"></textarea>
+                            placeholder="Message">
+                        </textarea>
                     </h3>
                     <button class="btn contact-btn mt-4">SEND</button>
                 </div>
-                <div class="col-md-5">
+                <div class="col-md-5 offset-md-1">
                     <div class="one_half ">
                         <h3 class="title-contact">
                             Lets start Working
