--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         </div>
         <div class="container  ">
             <div class="container-portfolio">
-                <div class="row mb-3 p-5">
+                <div class="row mb-3 p-5 ro-herop">
                     <div class="col-sm-4 herop mb-3">
                         <div class="row ">
                             <div class="col-sm-12 mb-3 img-b">
