--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
                 <div class="row ">
                     <div class="col-md-8 mt-4 mx-auto">
                         <div class="row d-flex justify-content-between">
-                            <div class="col-md-4">
+                            <div class="col-md-4 respo-ip">
                                 <div class="mb-3 bio-about">
                                     <label for="exampleFormControlInput1" class="form-label">Nama : </label>
                                     <h6 class="label-h6">Renaldi Sang Sloop</h6>
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-4 respo-ip">
                                 <div class="mb-3 bio-about">
                                     <label for="exampleFormControlInput1" class="form-label">Email :</label>
                                     <h6 class="label-h6">informatika3052@gmail.com</h6>
@@ -116,13 +116,13 @@
                     </div>
                     <div class="col-md-8 mt-4 mx-auto">
                         <div class="row d-flex justify-content-between">
-                            <div class="col-md-4">
+                            <div class="col-md-4 respo-ip">
                                 <div class="mb-3 bio-about">
                                     <label for="exampleFormControlInput1" class="form-label">Nama : </label>
                                     <h6 class="label-h6">Renaldi Sang Sloop</h6>
                                 </div>
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-4 respo-ip">
                                 <div class="mb-3 bio-about">
                                     <label for="exampleFormControlInput1" class="form-label">Email :</label>
                                     <h6 class="label-h6">informatika3052@gmail.com</h6>
@@ -132,7 +132,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-4 mx-auto">
+                    <div class="col-md-4 branding-ip mx-auto">
                         <div class=" branding-1 ">
                             <ul>
                                 <li><a href=""><i class="fab fa-facebook"></i></a></li>
