--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         href="https://fonts.googleapis.com/css2?family=Kaisei+HarunoUmi:wght@400;500;700&family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,400&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,900&family=Roboto:wght@400;700;900&family=Rubik:ital,wght@0,300;0,400;0,500;0,700;0,800;1,900&display=swap">
 
     <!-- Bootstrap CSS -->
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="assets/responsive.css">
     <link rel="stylesheet" href="icon/fontawesome-free-5.14.0-web/fontawesome-free-5.14.0-web/css/all.min.css">
@@ -121,14 +121,14 @@
                         <div class="row d-flex justify-content-between">
                             <div class="col-md-4 respo-ip">
                                 <div class="mb-3 bio-about">
-                                    <label for="exampleFormControlInput1" class="form-label">Nama : </label>
-                                    <h6 class="label-h6">Renaldi Sang Sloop</h6>
+                                    <label for="exampleFormControlInput1" class="form-label">Kesukaan : </label>
+                                    <h6 class="label-h6">Berbagi Senyum</h6>
                                 </div>
                             </div>
                             <div class="col-md-4 respo-ip">
                                 <div class="mb-3 bio-about">
-                                    <label for="exampleFormControlInput1" class="form-label">Email :</label>
-                                    <h6 class="label-h6">informatika3052@gmail.com</h6>
+                                    <label for="exampleFormControlInput1" class="form-label">Mimpi :</label>
+                                    <h6 class="label-h6">Adalah Koentji</h6>
                                 </div>
                             </div>
                         </div>
@@ -298,13 +298,10 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
-        integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
-        integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG"></script>
     <script src="assets/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
