--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <div class="box row d-flex justify-content-between">
                 <div class="col-sm-3 h-box  d-flex justify-content-evenly offset-sm-1 py-4 ">
-                    <a href=""><i class="fas fa-laptop-code "></i></a>
+                    <a href=""><i class="fas fa-laptop-code " id="fa-laptop-codee"></i></a>
                     <h5>Web Desain<br>Creative</h5>
                 </div>
                 <div class="col-sm-3 h-box  d-flex justify-content-evenly  py-4 ">
