update url link

--- a/index.html
+++ b/index.html
@@ -215,8 +215,9 @@
                     <div class="col-sm-4 herop mb-3">
                         <div class="row ">
                             <div class="col-sm-12 mb-3 img-b">
-                                <a href="https://informatika3052.github.io/renaldi86.github.io/"><img
-                                        src="img/port1.PNG" alt="porg"></a>
+                                <a href="https://informatika3052.github.io/renaldi86.github.io/" target="_blank">
+                                    <img src="img/port1.PNG" alt="porg">
+                                </a>
                             </div>
                             <div class="col-sm-12 img-b">
                                 <a href="#"><img src="img/img/b2.jpg" alt="port1"></a>
@@ -224,17 +225,19 @@
                         </div>
                     </div>
                     <div class="col-sm-4 herop mb-3 img-b">
-                        <a href="https://fucekkk.web.app/"><img src="img/port76.PNG" alt="port2"></a>
+                        <a href="https://fucekkk.web.app/" target="_blank"><img src="img/port76.PNG" alt="port2"></a>
                     </div>
                     <div class="col-sm-4 herop mb-3">
                         <div class="row">
                             <div class="col-sm-12 mb-3 img-b">
-                                <a href="https://informatika3052.github.io/renaldi86.github.io/"><img
-                                        src="img/port1.PNG" alt="porg"></a>
+                                <a href="https://informatika3052.github.io/renaldi86.github.io/" target="_blank">
+                                    <img src="img/port1.PNG" alt="porg">
+                                </a>
                             </div>
                             <div class="col-sm-12 img-b">
-                                <a href="http://sangsloop.000webhostapp.com/public/"><img src="img/port2.PNG"
-                                        alt="port1"></a>
+                                <a href="http://sangsloop.000webhostapp.com/public/" target="_blank">
+                                    <img src="img/port2.PNG" alt="port1">
+                                </a>
                             </div>
                         </div>
                     </div>
