--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </div>
                 <div class="row ">
                     <div class="col mt-5 text-center">
-                        <h2>Hello Slurr</h2>
+                        <h2>Hi, There!</h2>
                         <div class="col-md-10 mx-auto">
                             <h6 class="profile-text">Nama Saya
                                 <strong>SangSloop.</strong>
@@ -118,7 +118,6 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
                     <div class="col-md-8 mt-4 mx-auto">
                         <div class="row d-flex justify-content-between">
